# AIVK

./: .gitignore  .python-version  CHANGELOG.MD  CHANGELOG.md  LICENSE  README.md  demo_problem.py  llms.txt  pyproject.toml  requirements.txt  setup.py  temp.py  update.json
.github/workflows/: python-publish.yml
aivk_root/: .aivk  README.md  meta.toml  pyproject.toml
aivk_root/cache/: meta.toml
aivk_root/data/: meta.toml
aivk_root/etc/: mcp.toml
aivk_root/etc/aivk/: config.toml  meta.toml
aivk_root/logs/: meta.toml
aivk_root/modules/: meta.toml
aivk_root/modules/loader/core/: lifecycle.py
aivk_root/modules_bak/: meta.toml
aivk_root/modules_update/: meta.toml
aivk_root/tmp/: meta.toml
docs/: api-reference.md  development.md  getting-started.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/assets/css/: style.css
frontend/assets/js/: app.js
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: animations.css  main.css
frontend/src/components/layout/: AppFooter.vue  AppHeader.vue  AppNotifications.vue  AppSidebar.vue
frontend/src/components/plugins/: PluginCard.vue
frontend/src/components/ui/: AppNotifications.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  eventBus.js  eventService.js  llm-service.js
frontend/src/stores/: auth.js  index.js  main.js
frontend/src/views/: About.vue  Chat.vue  Dashboard.vue  LLMServices.vue  Logs.vue  NotFound.vue  PluginDetail.vue  PluginManager.vue  Settings.vue  Terminal.vue  UserProfile.vue
frontend/src/views/auth/: Login.vue  Register.vue
notebooks/: AivkConfig用法演示.ipynb
notebooks/AIG/: README.MD
scripts/: pyupgrade.py
src/aivk/: Meta.toml  __about__.py  __init__.py  __main__.py  aivk.py  aivk_impl.py  config.toml  logger.py  meta.toml
src/aivk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/aivk/agents/: Meta.toml  _agent_meta.py  agent_example.py  agents_impl.py
src/aivk/aivkd/: __main__.py  readme.md
src/aivk/api/: __init__.py  setlogger.py
src/aivk/base/: FastAIVK.py  Meta.toml  README.MD  __init__.py  aivk.py  aivkio.py  aivkmod.py  base_impl.py  cli.py  config.py  context.py  exceptions.MD  exceptions.py  fastaivk.py  fs.py  loader.py  models.MD  models.py  utils.MD  utils.py
src/aivk/cli/: README.MD  __init__.py  __main__.py
src/aivk/cli/amcp/: __init__.py  __main__.py
src/aivk/cli/install/: __init__.py  __main__.py
src/aivk/cli/list/: __init__.py  __main__.py
src/aivk/config/: __init__.py  base.py  flexible.py  models.py  v1.py
src/aivk/core/: __init__.py  aivkroot.py  exceptions.py  lifecycle.py
src/aivk/kernel/: Meta.toml  __init__.py  kernel_impl.py
src/aivk/llms/: Meta.toml  llms_impl.py
src/aivk/loader/: __init__.py  __main__.py
src/aivk/mcp/: server.py
src/aivk/meta/: Meta.toml  meta_impl.py
src/aivk/onCli/: README.MD  __init__.py  __main__.py
src/aivk/onInstall/: README.MD  __init__.py  __main__.py
src/aivk/onList/: README.MD  __init__.py  __main__.py
src/aivk/onLoad/: README.MD  __init__.py  __main__.py
src/aivk/onUninstall/: README.MD  __init__.py  __main__.py
src/aivk/onUnload/: README.MD  __init__.py  __main__.py
src/aivk/onUpdate/: README.MD  __init__.py  __main__.py
src/aivk/tools/: Meta.toml  tool_calculator.py  tool_example.py  tools_impl.py
tests/: test_TEE.py  test_agents.py  test_agents_list.py  test_aivk_config.py  test_aivkmod_lifecycle.py  test_aivkmod_send_receive.py  test_cli_context.py  test_config.py  test_llms_basic.py  test_llms_ids.py  test_meta.py  test_meta_save.py  test_tools.py
(+14 files in other folders)
