[project]
name = "aivk"
version = "0.4.5"
description = "Aivk is ai Virtual Kernel"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "lightjunction.me@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "colorlog>=6.9.0",
    "mcp[cli]>=1.6.0",
    "pluggy>=1.6.0",
    "pydantic>=2.11.7",
    "python-box>=7.3.2",
    "python-dotenv>=1.1.0",
    "watchdog>=6.0.0",
]

[project.scripts]
aivk = "aivk.cli:cli"

[project.entry-points."aivk.mods"]
aivkd = "aivk.aivkd:AivkDaemon"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pyupgrade>=3.19.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src"]
directory = "dist"

[tool.hatch.build.targets.wheel]
packages = ["src/aivk"]

[tool.mypy]

plugins = "datafiles.plugins:mypy"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]



