[project]
name = "aivk_root"
version = "0.1.0"
description = "AIVK Environment"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "AIVK", email = "lightjunction.me@gmail.com"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
exclude = [
    "/.git",
    "/.github",
    "/docs",
    "/tests",
    "/.gitignore",
]
