[project]
name = "aivk_agent"
version = "0.3.2.21"
description = "This a aivk module / mcp serve / uv projrct / build by AI Agent."
requires-python = ">=3.13"
dependencies = []
[[project.authors]]
name = "LIghtJUNction"
email = "lightjunction.me@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

["tool.hatch.build.targets.wheel"]
packages = [ "src/aivk_agent",]
